# python_qa_guru_poetry

./: pyproject.toml
